2001-01-28  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/number.h (cl_as_N): Remove bogus comment.

2001-01-22  Richard Kreckel  <kreckel@ginac.de>

        * configure.in: Make build in separate builddir possible (again).

2001-01-22  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/*.h: Change signatures of all classes' methods
          cln::cl_foo::operator new(size_t, cl_foo*) to
          cln::cl_foo::operator new(size_t, void*) so one can declare
          std::vector<cln::cl_foo>, std::list<cln::cl_foo> etc. for
          certain STL implementations (like libstdc++-v3).

2000-12-14  Richard Kreckel  <kreckel@ginac.de>

        * Version 1.1 released.

2000-12-13  Richard Kreckel  <kreckel@ginac.de>

        * */*: cl_istream -> std::istream, cl_ostream -> std::ostream.

2000-12-05  Richard Kreckel  <kreckel@ginac.de>

        * Makefile.in, src/Makefile.in, doc/Makefile.in: Use mkdir -p.
        * include/cln/version.h.in, src/base/verion.cc: New files.
        * configure.in: Generate include/cln/version.h.
        * cln.m4: Rewrote it. Check result of cln-config without compiling.
          Do cross-check library version and header version information.

2000-12-02  Christian Bauer  <cbauer@ginac.de>

        * Makefile.in, src/Makefile.in, doc/Makefile.in: Added $DESTDIR.
        * cln.m4, cln.spec.in: some minor fixes with respect to RPM package
          building.

2000-11-24  Richard Kreckel  <kreckel@ginac.de>

        * */*: Removed problematic stdin, stdout and stderr definitions.  
          Use std::cin, std::cout, std::cerr instead (obsoletes 2000-10-29).

2000-11-20  Bruno Haible

        * cln-config.1: change title.

2000-11-18  Richard Kreckel  <kreckel@ginac.de>

        * cln.m4: New file.
        * doc/cln.tex: Document package tools cln-config and cln.m4.
        * Makefile.in: Care about cln.m4.

2000-11-17  Richard Kreckel  <kreckel@ginac.de>
