@@ -1,3 +1,7 @@
+2001-03-05  Richard Kreckel  <kreckel@ginac.de>
+
+        * include/cln/modules.h (CL_JUMP_TO): Fix IA64 brokenness.
+
 2001-01-28  Richard Kreckel  <kreckel@ginac.de>
 
         * include/cln/number.h (cl_as_N): Remove bogus comment.
